# Simple-Calculator

./: CMakeLists.txt  README.md
scr/: main.c
src/: controller.c  main.c  operations.c  view.c
src/include/: controller.h  operations.h  view.h
